resources/css/comparison-map.css
.comparisonMap {display:grid;grid-template-columns:1fr auto 1fr;width:100%;height:100%; /* transition:grid-template-columns 0.05s linear; */}
.comparisonMap-map {width:100%;height:100%;position:relative;z-index:0;overflow:hidden;}
.comparisonMap-handle {width:1px;height:100%;background-color:#000;cursor:ew-resize;position:relative;z-index:1;outline:1px solid rgba(255,255,255,.3)}
.comparisonMap-handle-btn:hover {background-color:#006DE6;}
.comparisonMap-handle-btn:active {background-color:#002249;}
.comparisonMap-handle-btn {width:4.2rem;height:4.2rem;background-color:#0475F4;border:.3rem solid #FFF;border-radius:50%;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);cursor:pointer;background-image:url("../images/icon/icon-aspect-link.svg");background-size:2rem 2rem;background-position:50% 50%;background-repeat:no-repeat;}
.map-options {display:flex;flex-direction:column;gap:.6rem;}
.full-map-top-area,
.full-map-left-area,
.full-map-right-area,
.full-map-bottom {z-index:1;}
.full-map-area {width:100%;height:100%;}
[data-toggle-target="map-compare"][data-toggle-state="selected"].full-map-left-area {top:auto;bottom:2rem}
[data-toggle-target="map-compare"][data-toggle-state="selected"] .map-options {display:none}
.full-map-left-area .full-map-right-group2 {align-items:start;}
.full-map-left-area .legend-gauge .legend-unit {left:auto;right:1.2rem}
.ui-range.is-vertical .ui-range-txt {width:3.2rem;}
.full-map-left-area .ui-range.is-vertical .ui-range-txt {top:calc(100% + 2.2rem);text-align:center;bottom:auto;}
.full-map-left-area .ui-range.is-vertical .ui-range-txt::after {left:-.3rem;right:auto;transform:rotate(-45deg);}
.full-map-left-area .legend-gauge,
.full-map-left-area .rangedual-box,
.full-map-left-area .legend-gauge-item {flex-direction:row-reverse;}
.full-map-left-area .rangedual-box .legend-gauge-num {text-align:left;width:1.6rem}
.full-map-left-area .full-map-right-group2,
.full-map-top-area[data-toggle-target="map-compare"][data-toggle-state="selected"],
.full-map-bottom-area[data-toggle-target="map-compare"][data-toggle-state="selected"],
[data-toggle-target="map-compare"] .comparisonMap {display:none;}
[data-toggle-target="map-compare"][data-toggle-state="selected"].full-map-left-area .full-map-right-group2 {display:flex;}
[data-toggle-target="map-compare"][data-toggle-state="selected"] .comparisonMap {position:absolute;top:0;left:0;width:100%;height:100%;display:grid;}
@media (max-width:1023px) {
  .full-map-top-area[data-toggle-target="map-compare"][data-toggle-state="selected"] {display:flex;z-index:10}
}
.comparisonMap .comparisonMap-map-selects {position:absolute;top:4rem;left:50%;transform:translateX(-50%);display:flex;gap:0.8rem;align-items:center;z-index:1;}
.comparisonMap-map-selects hr {width:1px;height:1.8rem;background:#DBE3F7;}
.form-fake-select {padding:0 3.7rem 0 1.7rem;color:#19213D;font-weight:700;background-color:#F4F8FF;border-radius:2.1rem;height:4.3rem;border:0;background-repeat:no-repeat;background-size:2rem 2rem;background-position:right 1.1rem center;background-image:url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cmask id='mask0_58_2864' style='mask-type:alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='20' height='20'%3E%3Crect width='20' height='20' fill='%23D9D9D9'/%3E%3C/mask%3E%3Cg mask='url(%23mask0_58_2864)'%3E%3Cpath d='M9.71876 12.6978C9.62848 12.663 9.54862 12.6109 9.47917 12.5415L5.52084 8.58317C5.36806 8.43039 5.29514 8.25331 5.30209 8.05192C5.30903 7.85053 5.38889 7.67345 5.54167 7.52067C5.69445 7.36789 5.87153 7.2915 6.07292 7.2915C6.27431 7.2915 6.45139 7.36789 6.60417 7.52067L10 10.9373L13.4167 7.52067C13.5694 7.36789 13.7465 7.29498 13.9479 7.30192C14.1493 7.30887 14.3264 7.38873 14.4792 7.5415C14.6319 7.69428 14.7083 7.87137 14.7083 8.07275C14.7083 8.27414 14.6319 8.45123 14.4792 8.604L10.5208 12.5415C10.4514 12.6109 10.3715 12.663 10.2813 12.6978C10.191 12.7325 10.0972 12.7498 10 12.7498C9.90278 12.7498 9.80903 12.7325 9.71876 12.6978Z' fill='%2319213D'/%3E%3C/g%3E%3C/svg%3E%0A");}
.full-map-bottom-area {position:absolute;bottom:0;left:0;right:0;}
.time-range-control-area {display:flex;align-items:center;padding-left:1.8rem;gap:.7rem}
.timeRange {user-select:none;position:relative;height:9rem;padding-right:2rem;z-index:1;display:grid;align-items:center;grid-template-columns:auto 1fr;background-color:#181D2BBF;border-radius:0.4rem;gap:19.7rem;}
.timeRange-play {width:5.4rem;height:5.4rem;border-radius:99em;background-color:#181D2BCC;;background-image:url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cmask id='mask0_58_2259' style='mask-type:alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='24' height='24'%3E%3Crect width='24' height='24' fill='%23D9D9D9'/%3E%3C/mask%3E%3Cg mask='url(%23mask0_58_2259)'%3E%3Cpath d='M8 17.1752V6.8252C8 6.54186 8.1 6.30436 8.3 6.1127C8.5 5.92103 8.73333 5.8252 9 5.8252C9.08333 5.8252 9.17083 5.8377 9.2625 5.8627C9.35417 5.8877 9.44167 5.9252 9.525 5.9752L17.675 11.1502C17.825 11.2502 17.9375 11.3752 18.0125 11.5252C18.0875 11.6752 18.125 11.8335 18.125 12.0002C18.125 12.1669 18.0875 12.3252 18.0125 12.4752C17.9375 12.6252 17.825 12.7502 17.675 12.8502L9.525 18.0252C9.44167 18.0752 9.35417 18.1127 9.2625 18.1377C9.17083 18.1627 9.08333 18.1752 9 18.1752C8.73333 18.1752 8.5 18.0794 8.3 17.8877C8.1 17.696 8 17.4585 8 17.1752Z' fill='white'/%3E%3C/g%3E%3C/svg%3E%0A");background-position:50% 50%;background-size:2.4rem 2.4rem;background-repeat:no-repeat;}
/* ... */

